--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://JeanDiaz07.github.io/Proyecto4/Inicio",
+  "homepage": "https://JeanDiaz07.github.io/Proyecto4/Inicio.jsx",
   "name": "proyecto4",
   "private": true,
   "version": "0.0.0",
